# C_Charles

./: README.md  TODO.md  arquivo.ccr  arquivo_erro.ccr  arquivo_for.ccr  arquivo_if.ccr  arquivo_input.ccr  arvore.txt  codigo.ccr  first_follow.md  glc_ajustada.md  gramatica_livre_contexto.md  hello_world.ccr  modelo.ccr  pyproject.toml  traducao.pas
IDE/: ide.py  main.py
src/: main.py
src/lexic/: afd.py  depara.py  lexer.py  node.py  parser.py  token_lexico.py  tree.py
src/lexic/operators/: __init__.py  brackets_operator.py  decimal_operator.py  end_line_operator.py  float_operator.py  identifier_operator.py  integer_operator.py  key_words_operator.py  logic_operator.py  math_operator.py  string_operator.py
src/utils/: character_iterator.py
